--- a/src/pages/character-page/components/character-card/styles.module.css
+++ b/src/pages/character-page/components/character-card/styles.module.css
@@ -1,9 +1,15 @@
+.card-background {
+    background-color: red;
+}
+
 .card {
     background: white;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 300px;
     overflow: hidden;
+    margin-top: 10px;
+    margin-inline: auto;
 }
 
 .card-image {
@@ -28,29 +34,31 @@
     list-style: none;
     padding: 0;
     margin: 0;
+
+    & li {
+        margin-bottom: 8px;
+        font-size: 14px;
+        color: #666;
+    }
 }
 
-.details-list li {
-    margin-bottom: 8px;
-    font-size: 14px;
-    color: #666;
-}
 
 .status {
     display: flex;
     align-items: center;
     text-transform: uppercase;
     font-weight: 500;
+
+    &::before {
+        content: "";
+        display: inline-block;
+        width: 8px;
+        height: 8px;
+        border-radius: 50%;
+        margin-right: 8px;
+    }
 }
 
-.status::before {
-    content: "";
-    display: inline-block;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    margin-right: 8px;
-}
 
 .status-alive::before {
     background-color: #55cc44;
