refactor: renames filenames

--- a/src/pages/location-page/components/location-card/LocationCard.module.css
+++ b/src/pages/location-page/components/location-card/LocationCard.module.css
@@ -47,7 +47,7 @@
     align-items: center;
 }
 
-.episode-number {
+.location-number {
     background: #4CAF50;
     color: white;
     padding: 4px 8px;
