--- a/src/app/App.css
+++ b/src/app/App.css
@@ -35,6 +35,9 @@ body {
     margin-inline: auto;
     font-size: 1.2rem;
     font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 li {
@@ -48,7 +51,7 @@ li {
     &:hover, &:link{
         opacity: 0.7;
     }
-    
+
     &:focus{
         outline: none;
         color: rgb(98, 129, 142);
