--- a/src/pages/location-page/LocationPage.module.css
+++ b/src/pages/location-page/LocationPage.module.css
@@ -1,10 +1,10 @@
-.episode-container {
+.location-container {
     max-width: 800px;
     margin: 2rem auto;
     padding: 0 20px;
 }
 
-.episode-list {
+.location-list {
     list-style: none;
     padding: 0;
     margin: 0;
